# Persoanl-Local-AI-Assistant

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  DEVELOPMENT.md  LICENSE  README.md  STREAMING_IMPLEMENTATION_COMPLETE.md  app.py  pyproject.toml  requirements.txt  test_clean_streaming.py  test_debug_streaming.py  test_separated_streaming.py  test_simplified_db.py  test_streaming.py  test_unified_streaming.py
archive/: README.md  main_page_ui.py
archive/legacy_core/: langchain_tools.py
archive/legacy_pages/: 1_Job_Tracker.py  2_AI_Assistant.py
core/: LLM_backends.py  ai_tools.py  db.py  file_utils.py  langchain_tools.py
core/controllers/: application_controller.py  job_posting_controller.py  job_tracker_controller.py
core/database/: __init__.py  base.py  crud.py  db_utils.py  init_db.py  job_tracker_utils.py  models.py  schemas.py  schemas_backup.py
core/services/: application_service.py  file_service.py  job_posting_service.py  job_tracker_service.py  llm_service.py  prompt_service.py
core/ui/: base.py  displays.py  form_handlers.py  form_renderers.py  forms.py  job_tracker_ui.py  llm_setup.py  main_page_ui.py  streaming_ui.py
data/: job_applications.db
demo/: workflow_demo.py
docs/: PREFILL_INTERFACE.md  codebase_analysis.md  module_reorganization_summary.md
pages/: 1_Job_Tracker.py  2_AI_Assistant.py  3_Test.py
tests/: populate_test_data.py
